# ELVAS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sm.in
manual/: manual.tex
src/: elvas.cpp  elvas_script.cpp  evaluator.cpp  interpreter.cpp  main.cpp
src/include/: ast.h  elvas.h  elvas_script.h  evaluator.h  interpreter.h  ntools.h  parser.h  version.h
